聊天处理 提醒数字处理

--- a/res/layout/mine_msg_activity.xml
+++ b/res/layout/mine_msg_activity.xml
@@ -40,17 +40,16 @@
                   android:layout_marginTop="8dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="欢迎使用幸福牵手吧"
                   android:layout_marginLeft="8dp"
                   android:textColor="@color/textColortwo"
                   android:textSize="14sp"
+                  android:singleLine="true"
                   android:layout_below="@+id/one_title"
                   android:id="@+id/one_msg"
                   android:layout_toRightOf="@+id/one_cover"
                   android:layout_marginTop="3dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="2017-01-20"
                   android:textSize="12sp"
                   android:id="@+id/one_dateline"
                   android:textColor="@color/textColortwo"
@@ -93,17 +92,16 @@
                   android:layout_marginTop="8dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="欢迎使用幸福牵手吧"
                   android:layout_marginLeft="8dp"
                   android:textColor="@color/textColortwo"
                   android:textSize="14sp"
                   android:layout_below="@+id/two_title"
                   android:id="@+id/two_msg"
+                  android:singleLine="true"
                   android:layout_toRightOf="@+id/two_cover"
                   android:layout_marginTop="3dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="2017-01-20"
                   android:textSize="12sp"
                   android:id="@+id/two_dateline"
                   android:textColor="@color/textColortwo"
@@ -146,17 +144,16 @@
                   android:layout_marginTop="8dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="欢迎使用幸福牵手吧"
                   android:layout_marginLeft="8dp"
                   android:textColor="@color/textColortwo"
                   android:textSize="14sp"
                   android:layout_below="@+id/three_title"
                   android:id="@+id/three_msg"
+                  android:singleLine="true"
                   android:layout_toRightOf="@+id/three_cover"
                   android:layout_marginTop="3dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="2017-01-20"
                   android:textSize="12sp"
                   android:id="@+id/three_dateline"
                   android:textColor="@color/textColortwo"
@@ -199,17 +196,16 @@
                   android:layout_marginTop="8dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="欢迎使用幸福牵手吧"
                   android:layout_marginLeft="8dp"
                   android:textColor="@color/textColortwo"
                   android:textSize="14sp"
                   android:layout_below="@+id/four_title"
                   android:id="@+id/four_msg"
+                  android:singleLine="true"
                   android:layout_toRightOf="@+id/four_cover"
                   android:layout_marginTop="3dp"
                   android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
-                  android:text="2017-01-20"
                   android:textSize="12sp"
                   android:id="@+id/four_dateline"
                   android:textColor="@color/textColortwo"
