--- a/res/layout/foot.xml
+++ b/res/layout/foot.xml
@@ -36,7 +36,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="1dp"
-                android:background="@drawable/em_unread_dot"
+                android:background="@drawable/ease_unread_count_bg"
                 android:gravity="center"
                 android:textColor="@android:color/white"
                 android:textSize="12sp"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/em_unread_dot"
+                android:background="@drawable/ease_unread_count_bg"
                  />
     </RelativeLayout>
     <RelativeLayout android:layout_width="0dp"
