--- a/res/layout/two_header.xml
+++ b/res/layout/two_header.xml
@@ -7,7 +7,10 @@
     <RelativeLayout
                     android:layout_width="match_parent"
                     android:paddingLeft="8.0dip"
-                    style="@style/MMListItem"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="4.0dip"
+                    android:paddingRight="4.0dip"
+                    android:paddingTop="4.0dip"
                     android:id="@+id/relate_notice"
                     android:background="@drawable/btn_white_shape"
                     android:layout_height="56.0dip">
@@ -23,12 +26,15 @@
                    android:gravity="center"
                    android:layout_marginLeft="33dp"
                    android:textSize="12sp"
-                   android:textColor="@color/white"
+                   android:textColor="#ffffff"
                    android:background="@drawable/noti_bg_circle"
                    android:layout_height="wrap_content"/>
         <TextView android:layout_width="wrap_content"
                   android:text="系统通知"
-                  style="@style/MMFontTitleInList"
+                  android:textSize="16.0dip"
+                  android:gravity="center_vertical"
+                  android:singleLine="true"
+                  android:textColor="#ff595c61"
                   android:layout_marginLeft="8dp"
                   android:id="@+id/notice_title"
                   android:layout_toRightOf="@+id/notice_cover"
@@ -37,7 +43,7 @@
         <TextView android:layout_width="wrap_content"
                   android:text="欢迎使用幸福牵手吧"
                   android:layout_marginLeft="8dp"
-                  android:textColor="@color/textColortwo"
+                  android:textColor="#c0c0c0"
                   android:textSize="14sp"
                   android:layout_below="@+id/notice_title"
                   android:id="@+id/notice_msg"
@@ -48,7 +54,7 @@
                   android:text="2017-01-20"
                   android:textSize="12sp"
                   android:id="@+id/notice_dateline"
-                  android:textColor="@color/textColortwo"
+                  android:textColor="#c0c0c0"
                   android:layout_alignParentRight="true"
                   android:layout_marginTop="6dp"
                   android:layout_marginRight="6dp"
