--- a/res/layout/em_activity_group_details.xml
+++ b/res/layout/em_activity_group_details.xml
@@ -59,7 +59,8 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_vertical|left"
                 android:paddingLeft="20dip"
-                android:text="Owner and administrators"
+                android:text="群管理员"
+                android:visibility="gone"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:typeface="serif" />
@@ -67,6 +68,7 @@
             <com.hyphenate.easeui.widget.EaseExpandGridView
                 android:id="@+id/owner_and_administrators_grid_view"
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
@@ -85,7 +87,7 @@
                 android:layout_centerVertical="true"
                 android:gravity="center_vertical|left"
                 android:paddingLeft="20dip"
-                android:text="members mute blacklist"
+                android:text="群组成员"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:typeface="serif" />
@@ -395,7 +397,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="11dp"
-                android:background="@drawable/em_btn_style_alert_dialog_special"
+                android:background="@drawable/btn_big_active"
                 android:onClick="exitGroup"
                 android:paddingBottom="7dp"
                 android:paddingTop="7dp"
@@ -408,7 +410,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="11dp"
-                android:background="@drawable/em_btn_style_alert_dialog_special"
+                android:background="@drawable/btn_big_active"
                 android:onClick="exitDeleteGroup"
                 android:paddingBottom="7dp"
                 android:paddingTop="7dp"
