--- a/res/layout/register_activity.xml
+++ b/res/layout/register_activity.xml
@@ -65,7 +65,7 @@
             <LinearLayout android:layout_width="match_parent"
                           android:orientation="horizontal"
                           android:id="@+id/sex_liner"
-                          android:background="@drawable/btn_sex_left"
+                          android:background="@drawable/btn_sex_left_disable"
                           android:layout_marginTop="15dp"
                           android:layout_below="@+id/pwrsure"
                           android:layout_marginLeft="15dp"
@@ -101,7 +101,7 @@
                     android:textStyle="bold"
                     android:id="@+id/btn_login"
                     android:textSize="16sp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/textColortwo"
                     android:background="@drawable/btn_big_unactive"
                     android:layout_height="wrap_content"/>
 
