--- a/res/layout/about_activity.xml
+++ b/res/layout/about_activity.xml
@@ -14,7 +14,7 @@
                     android:layout_height="match_parent">
         <com.lbins.meetlove.widget.RoundImageView
                     android:layout_width="98dp"
-                   android:layout_marginTop="15dp"
+                   android:layout_marginTop="35dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/launcher"
                     android:id="@+id/title"
@@ -89,8 +89,9 @@
                       android:textColor="@color/foot_color_default"
                       android:layout_height="wrap_content"/>
             <TextView android:layout_width="wrap_content"
-                      android:text="联系我们：86:（024）31054568"
+                      android:text="联系我们:（024）31054568"
                       android:textSize="13sp"
+                      android:id="@+id/tel"
                       android:layout_marginTop="3dp"
                       android:textColor="@color/main_color"
                       android:layout_height="wrap_content"/>
