--- a/res/layout/welcome.xml
+++ b/res/layout/welcome.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <ImageView android:layout_width="match_parent"
-               android:src="@drawable/bigpic_login"
+               android:src="@drawable/welcome_loading"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"/>
 </LinearLayout>
