--- a/res/layout/em_activity_black_list.xml
+++ b/res/layout/em_activity_black_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#f2f0eb" >
+    android:background="@color/bg_gray" >
 
     <RelativeLayout
         android:id="@+id/top_bar"
