--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="@drawable/bigpic_login"
+              android:background="@color/white"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <include
@@ -118,19 +118,20 @@
                           android:text="服务条款"
                           android:textSize="13sp"
                           android:layout_height="wrap_content"/>
-                <TextView android:layout_width="wrap_content"
-                          android:layout_marginLeft="5dp"
-                          android:layout_gravity="center"
-                          android:gravity="center"
-                          android:textColor="@color/text_color"
-                          android:text="和"
-                          android:textSize="13sp"
-                          android:layout_height="wrap_content"/>
+                <!--<TextView android:layout_width="wrap_content"-->
+                          <!--android:layout_marginLeft="5dp"-->
+                          <!--android:layout_gravity="center"-->
+                          <!--android:gravity="center"-->
+                          <!--android:textColor="@color/text_color"-->
+                          <!--android:text="和"-->
+                          <!--android:textSize="13sp"-->
+                          <!--android:layout_height="wrap_content"/>-->
                 <TextView android:layout_width="wrap_content"
                           android:layout_marginLeft="5dp"
                           android:layout_gravity="center"
                           android:gravity="center"
                           android:id="@+id/btn_ysbh"
+                          android:visibility="gone"
                           android:textSize="13sp"
                           android:textColor="@color/main_color"
                           android:text="隐私保护"
