--- a/res/layout/pop_education.xml
+++ b/res/layout/pop_education.xml
@@ -6,17 +6,17 @@
               android:background="@color/bg_gray"
               android:orientation="vertical">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="15dp"
-                android:background="@drawable/btn_dark_shape"
-                android:gravity="center"
-                android:text="高中及以下"
-                android:id="@+id/btn1"
-                android:textColor="@color/textColor"
-                android:textSize="16sp"/>
+        <!--<TextView-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_weight="1"-->
+                <!--android:padding="15dp"-->
+                <!--android:background="@drawable/btn_dark_shape"-->
+                <!--android:gravity="center"-->
+                <!--android:text="高中及以下"-->
+                <!--android:id="@+id/btn1"-->
+                <!--android:textColor="@color/textColor"-->
+                <!--android:textSize="16sp"/>-->
 
         <TextView
                 android:layout_width="match_parent"
@@ -26,7 +26,7 @@
                 android:gravity="center"
                 android:padding="15dp"
                 android:background="@drawable/btn_dark_shape"
-                android:text="中专"
+                android:text="专科以下"
                 android:id="@+id/btn2"
                 android:textColor="@color/textColor"
                 android:textSize="16sp"/>
