--- a/res/layout/profile_detail_activity.xml
+++ b/res/layout/profile_detail_activity.xml
@@ -73,7 +73,7 @@
                               android:layout_marginRight="6dp"
                               android:layout_height="wrap_content">
                     <TextView android:layout_width="70dp"
-                              android:text="个性签名"
+                              android:text="个性签名:"
                               android:textSize="15sp"
                               android:textColor="@color/text_color"
                               android:layout_height="wrap_content"/>
@@ -84,6 +84,7 @@
                               android:paddingLeft="8dp"
                               android:textSize="15sp"
                               android:minHeight="65dp"
+                              android:lineSpacingMultiplier="1.2"
                               android:textColor="@color/text_color"
                               android:textColorHint="@color/textColortwo"
                               android:layout_weight="1"
