--- a/res/layout/foot.xml
+++ b/res/layout/foot.xml
@@ -11,24 +11,36 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="match_parent">
-        <ImageView android:layout_width="wrap_content"
-                   android:src="@drawable/tabicon_recommand_p"
-                   android:id="@+id/foot_one"
-                   android:layout_centerInParent="true"
-                   android:layout_height="wrap_content"/>
-
+        <Button
+                android:id="@+id/foot_one"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:drawableTop="@drawable/tabicon_recommand_p"
+                android:onClick="onTabClicked"
+                android:paddingBottom="2dip"
+                android:paddingTop="7dip"
+                android:scaleType="matrix"
+                android:textSize="12sp" />
     </RelativeLayout>
+
     <RelativeLayout android:layout_width="0dp"
                   android:layout_weight="1"
                   android:id="@+id/foot_liner_two"
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:layout_height="match_parent">
-        <ImageView android:layout_width="wrap_content"
-                   android:id="@+id/foot_two"
-                   android:layout_centerInParent="true"
-                   android:src="@drawable/tabicon_msg"
-                   android:layout_height="wrap_content"/>
+        <Button
+                android:id="@+id/foot_two"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:drawableTop="@drawable/tabicon_msg"
+                android:onClick="onTabClicked"
+                android:paddingBottom="2dip"
+                android:paddingTop="7dip"
+                android:scaleType="matrix"
+                android:textSize="12sp" />
         <TextView
                 android:id="@+id/unread_msg_number"
                 android:layout_width="wrap_content"
@@ -48,11 +60,17 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_height="match_parent">
-        <ImageView android:layout_width="wrap_content"
-                   android:id="@+id/foot_three"
-                   android:layout_centerInParent="true"
-                   android:src="@drawable/tabicon_contact"
-                   android:layout_height="wrap_content"/>
+        <Button
+                android:id="@+id/foot_three"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:drawableTop="@drawable/tabicon_contact"
+                android:onClick="onTabClicked"
+                android:paddingBottom="2dip"
+                android:paddingTop="7dip"
+                android:scaleType="matrix"
+                android:textSize="12sp" />
         <TextView
                 android:id="@+id/unread_address_number"
                 android:layout_width="wrap_content"
@@ -68,11 +86,22 @@
                   android:layout_gravity="center"
                   android:gravity="center"
                   android:layout_height="match_parent">
-        <ImageView android:layout_width="wrap_content"
-                   android:id="@+id/foot_four"
-                   android:layout_centerInParent="true"
-                   android:src="@drawable/tabicon_mine"
-                   android:layout_height="wrap_content"/>
+        <!--<ImageView android:layout_width="wrap_content"-->
+                   <!--android:id="@+id/foot_four"-->
+                   <!--android:layout_centerInParent="true"-->
+                   <!--android:src="@drawable/tabicon_mine"-->
+                   <!--android:layout_height="wrap_content"/>-->
+        <Button
+                android:id="@+id/foot_four"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:drawableTop="@drawable/tabicon_mine"
+                android:onClick="onTabClicked"
+                android:paddingBottom="2dip"
+                android:paddingTop="7dip"
+                android:scaleType="matrix"
+                android:textSize="12sp" />
     </RelativeLayout>
 
 
