--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:background="@color/white"
                 android:layout_height="match_parent">
 
@@ -8,16 +9,18 @@
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
             android:background="@color/white"
-            android:layout_marginBottom="60dp"
-            android:layout_height="match_parent">
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
     </FrameLayout>
+
+    <View android:layout_width="match_parent"
+          android:background="@color/gray01"
+          android:layout_height="0.5dp"></View>
 
     <include
             android:id="@+id/home_item_photo"
             android:layout_width="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             layout="@layout/foot"/>
 
-
-</RelativeLayout>
+</LinearLayout>
