--- a/res/layout/msg_msg_dialog.xml
+++ b/res/layout/msg_msg_dialog.xml
@@ -9,38 +9,28 @@
                 android:id="@+id/msg"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:layout_marginLeft="18dp"
-                android:layout_marginRight="18dp"
-                android:textSize="18sp"
-                android:layout_marginTop="18dp"
-                android:gravity="center|left"
-                android:lineSpacingMultiplier="1.2"
-                android:text="佛说：前世五百年的回眸，换来今生的擦肩而过。且行且珍惜，别冲动，请您三思！"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+                android:textSize="16sp"
+                android:layout_marginTop="35dp"
+                android:gravity="center"
                 android:textColor="@color/black"/>
 
         <LinearLayout android:layout_width="match_parent"
                       android:padding="3dp"
-                      android:layout_marginTop="10dp"
+                      android:layout_marginTop="35dp"
                       android:layout_centerHorizontal="true"
                       android:gravity="center_horizontal"
                       android:layout_below="@+id/msg"
                       android:layout_height="wrap_content">
             <Button
-                    android:id="@+id/btn_cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/btn_small_active"
-                    android:textSize="14sp"
-                    android:text="取消"
-                    android:textColor="@color/white"/>
-            <Button
                     android:id="@+id/btn_sure"
                     android:layout_width="wrap_content"
-                    android:layout_marginLeft="35dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_small_active"
                     android:textSize="14sp"
-                    android:text="解除关系"
+                    android:text="知道了"
                     android:textColor="@color/white"/>
         </LinearLayout>
 
