--- a/res/layout/four_fragment.xml
+++ b/res/layout/four_fragment.xml
@@ -17,12 +17,12 @@
                       android:layout_height="match_parent">
             <LinearLayout android:layout_width="match_parent"
                           android:background="@color/white"
-                          android:padding="10dp"
+                          android:padding="16dp"
                           android:orientation="horizontal"
                           android:layout_height="wrap_content">
                 <com.lbins.meetlove.widget.RoundImageView
-                        android:layout_width="108dp"
-                        android:layout_height="108dp"
+                        android:layout_width="138dp"
+                        android:layout_height="138dp"
                         android:layout_margin="6dp"
                         android:src="@drawable/default_cover1"
                         android:id="@+id/cover"
@@ -32,8 +32,9 @@
                                 android:layout_height="wrap_content">
                     <TextView android:layout_width="wrap_content"
                               android:id="@+id/nickname"
+                              android:text="李灵黛"
                               android:layout_centerHorizontal="true"
-                              android:textSize="22sp"
+                              android:textSize="32sp"
                               android:textColor="@color/textColor"
                               android:layout_marginTop="15dp"
                               android:layout_height="wrap_content"/>
@@ -56,7 +57,10 @@
                               android:layout_height="wrap_content"/>
                     <TextView android:layout_width="wrap_content"
                               android:padding="12dp"
+                              android:lines="2"
+                              android:ellipsize="end"
                               android:id="@+id/sign"
+                              android:lineSpacingMultiplier="1.2"
                               android:textColor="@color/textColortwo"
                               android:layout_below="@+id/is_tuijian"
                               android:layout_height="wrap_content"/>
@@ -71,7 +75,7 @@
                 <LinearLayout android:layout_width="108dp"
                               android:layout_gravity="center"
                               android:gravity="center"
-                              android:layout_marginLeft="8dp"
+                              android:layout_marginLeft="18dp"
                               android:layout_height="wrap_content">
                     <ImageView android:layout_width="18dp"
                                android:id="@+id/vip_1"
