--- a/res/layout/gallery_url.xml
+++ b/res/layout/gallery_url.xml
@@ -3,10 +3,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="fill_parent"
+                android:background="@color/black"
                 android:layout_height="fill_parent"
                 tools:ignore="Orientation">
     <com.lbins.meetlove.gallery.GalleryViewPager
             android:id="@+id/viewer"
+            android:background="@color/black"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"/>
 
@@ -24,6 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
+                    android:visibility="gone"
                     android:onClick="download"
                     android:src="@drawable/btn_blue_selector"
                     android:layout_centerHorizontal="true"
