--- a/res/layout/item_grid_pic.xml
+++ b/res/layout/item_grid_pic.xml
@@ -6,10 +6,9 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <com.lbins.meetlove.widget.RoundImageView
+    <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_margin="6dp"
             android:scaleType="centerCrop"
             android:src="@drawable/default_cover2"
             android:id="@+id/item_pic"
