--- a/res/layout/item_tuijian_group.xml
+++ b/res/layout/item_tuijian_group.xml
@@ -4,16 +4,17 @@
               android:padding="3dp"
               android:background="@drawable/btn_white_shape"
               android:layout_height="wrap_content">
-    <com.lbins.meetlove.widget.RoundImageView
+    <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_margin="6dp"
+            android:layout_marginLeft="8dp"
             android:id="@+id/item_cover"/>
     <TextView android:layout_width="wrap_content"
               android:textColor="@color/textColor"
               android:textSize="15sp"
               android:layout_centerVertical="true"
               android:id="@+id/nickname"
+              android:layout_marginLeft="6dp"
               android:layout_toRightOf="@+id/item_cover"
               android:layout_marginTop="8dp"
               android:layout_height="wrap_content"/>
