--- a/res/layout/item_tuijian_people.xml
+++ b/res/layout/item_tuijian_people.xml
@@ -5,26 +5,30 @@
               android:background="@drawable/btn_white_shape"
               android:layout_height="wrap_content">
 
-    <com.lbins.meetlove.widget.RoundImageView
+    <ImageView
             android:layout_width="50dp"
+            android:layout_marginLeft="8dp"
             android:layout_height="50dp"
-            android:layout_margin="3dp"
             android:id="@+id/item_cover"/>
-    <TextView android:layout_width="wrap_content"
-              android:textColor="@color/textColor"
-              android:textSize="15sp"
-              android:id="@+id/nickname"
-              android:layout_toRightOf="@+id/item_cover"
-              android:layout_marginTop="8dp"
-              android:layout_height="wrap_content"/>
     <TextView android:layout_width="wrap_content"
               android:textColor="@color/main_color"
               android:textSize="15sp"
-              android:layout_below="@+id/nickname"
               android:id="@+id/state"
               android:layout_toRightOf="@+id/item_cover"
-              android:layout_marginTop="6dp"
+             android:layout_marginTop="5dp"
+              android:layout_marginLeft="6dp"
               android:layout_height="wrap_content"/>
+
+    <TextView android:layout_width="wrap_content"
+              android:textColor="@color/textColor"
+              android:textSize="15sp"
+              android:layout_below="@+id/state"
+              android:layout_marginLeft="6dp"
+              android:id="@+id/nickname"
+              android:layout_toRightOf="@+id/item_cover"
+              android:layout_marginTop="5dp"
+              android:layout_height="wrap_content"/>
+
     <ImageView android:layout_width="wrap_content"
                android:src="@drawable/icon_small_list_more"
                android:layout_alignParentRight="true"
