--- a/res/layout/publish_mood_gridview_item.xml
+++ b/res/layout/publish_mood_gridview_item.xml
@@ -10,6 +10,7 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:scaleType="centerCrop"
+            android:src="@drawable/icon_choosephoto"
             android:layout_centerInParent="true"/>
 
 </com.lbins.meetlove.widget.SquareLayout>
