--- a/res/layout/top.xml
+++ b/res/layout/top.xml
@@ -45,8 +45,8 @@
 
             <ImageView
                     android:id="@+id/btn_right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:src="@drawable/icon_navbar_more"
                     android:layout_centerInParent="true"
                     android:scaleType="centerInside" />
